--- a/homework-15/assets/css/style.css
+++ b/homework-15/assets/css/style.css
@@ -11,10 +11,13 @@ input:valid + small {
     display: none;
 }
 
-.second-page {
+/* .second-page {
     margin-left: 45%;
 }
 
+.home {
+    margin-left: 47%; */
+}
 /* .pic {
     display: none;
     margin-left: 35%;
@@ -24,3 +27,30 @@ input:valid + small {
 button:active + .pic {
     display: block;
 } */
+
+@media (max-width: 768px) {
+
+    .cont {
+        width: 100%;  
+        height: 650px; 
+    }
+
+    .nav {
+        display: none;
+    }
+    
+    .logo {
+        margin-left: 28%;
+        font-size: x-large;
+        font-weight: bolder;
+    }
+
+    
+    .second-page {
+        margin-left: 32%;
+    }
+
+    .home {
+        margin-left: 40%;
+    }
+}
